// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders a loader when initializing 1`] = `
<div>
  <div>
    <div>
      [SIDEBAR]
    </div>
    <main
      class="main"
    >
      <div
        class="loader"
      />
    </main>
  </div>
</div>
`;

exports[`Layout renders the children when initialized 1`] = `
<div>
  <div>
    <div>
      [SIDEBAR]
    </div>
    <main
      class="main"
    >
      <div>
        Hello World!
      </div>
    </main>
  </div>
</div>
`;
